# crays

./: .gitignore  CMakeLists.txt  Makefile  crays
src/: drawline.c  game.c  game.h  inputs.c  inputs.h  lines.c  lines.h  main.c  rays.c  rays.h  textures.h  utils.h  values.h
